--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </form>
     </header>
     <!-- <script src="./assets/js/script.js"></script> -->
-    <main class="page-content">
+    <main class="page-content" id="page-content">
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
             <ul class="task-list" id="tasks-to-do">
